syntax ="proto3";
option java_package ="stub";

service user{
  rpc login(LoginRequest) returns (LoginResponse);
}

message LoginRequest{
  string userName=1;
  string passWord=2;
}

message LoginResponse{
  string msgResponse=1;
  int32 idResponse=2;
}